Addressed accessibility issues on Workflows pages * Marked up the TabBar widget as role=tablist * Adjusted Prism code editor colors to increase contrast to 4.5:1 * Added a label to the snapshot selector * Added a "main" landmark surrounding the Workflows page contents * Converted dashboard headers to actual h2 tags

--- a/src/style.css
+++ b/src/style.css
@@ -127,3 +127,27 @@ a {
   animation: progress-bar-stripes 1s linear infinite;
 }
 
+/* Prism theme overrides to increase contrast for accessibility */
+.token.punctuation {
+  color: #767676 !important; /* #999; */
+}
+
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted {
+  color: #518400 !important; /* #690; */
+}
+
+.token.function,
+.token.class-name {
+  color: #d3405e !important; /* #DD4A68; */
+}
+
+.token.regex,
+.token.important,
+.token.variable {
+  color: #b56000 !important; /* #e90; */
+}
